files-objc/Mistake_logs/Mistake-4.txt
SettingsViewController.m:91:22: error: no visible @interface for 'FileListViewController' declares the selector 'loadDirectoryContents'
    [self.fileListVC loadDirectoryContents];
     ~~~~~~~~~~~~~~~ ^~~~~~~~~~~~~~~~~~~~~
1 error generated.
